--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
+    "express": "^4.16.4",
+    "nodemon": "^1.18.10",
+    "pusher": "^2.2.0",
     "vue": "^2.5.11"
   },
   "browserslist": [
